# financial-fine-print-decoder

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: __init__.py
src/fineprint/: __init__.py  analyzer.py  config.py  prompts.py
